# axis

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  old-agent-instructions.md  pyproject.toml
.beads/: metadata.json
openspec/: config.yaml
openspec/changes/multi-phase-battle-units/: design.md  proposal.md  tasks.md
openspec/changes/multi-phase-battle-units/specs/territory-game/: spec.md
openspec/changes/polynesian-map/: README.md  design.md  proposal.md  tasks.md
openspec/changes/polynesian-map/specs/territory-game/: spec.md
openspec/changes/territory-game/: README.md  design.md  proposal.md  tasks.md
openspec/specs/territory-game/: spec.md
src/: __init__.py  actions.py  combat.py  combat_loop.py  combat_phase.py  economy.py  game.py  movement.py  movement_phase.py  ncm_phase.py  serializer.py  server.py  state.py  territory.py  unit_types.py  units.py  valid_actions.py
src/static/: index.html
tests/: test_actions.py  test_board_ui_unit_counts.py  test_board_ui_unit_icons.py  test_combat.py  test_combat_loop.py  test_combat_ownership.py  test_combat_phase.py  test_combat_units.py  test_economy.py  test_movement.py  test_movement_phase.py  test_movement_ui.py  test_multi_battle_ui.py  test_ncm_phase.py  test_neutral_ownership.py  test_neutral_start.py  test_polygon_territories.py  test_pygame_gui_integration.py  test_serializer.py  test_server.py  test_server_integration.py  test_state.py  test_territory.py  test_unit_types.py  test_units.py  test_valid_actions.py
(+1 files in other folders)
