[tool.poetry]
name = "agent-3"
version = "0.1.0"
description = "Pacific map (30 territories) — Python + Pygame"
authors = ["agent-3"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pygame = ">=2.5.0"
pygame-gui = ">=0.6.0"
flask = ">=3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
requests = "^2.33.1"

[tool.poetry.scripts]
game = "src.game:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
